Fix mermaid dark mode

--- a/assets/css/prose.css
+++ b/assets/css/prose.css
@@ -165,5 +165,9 @@
 }
 
 .prose .mermaid {
-  @apply bg-neutral-300 mx-auto;
+  @apply hidden bg-black mx-auto rounded-none border-2 border-neutral-800 px-4;
+}
+
+.prose .mermaid[data-processed="true"] {
+  @apply block;
 }
